--- a/kubernetes/cluster/flux-bootstrap/cilium.yaml
+++ b/kubernetes/cluster/flux-bootstrap/cilium.yaml
@@ -40,8 +40,7 @@ spec:
     cluster:
       name: "tamland-prd"
       id: 1
-    pmtuDiscovery:
-      enabled: true
+    mtu: 1450
     hubble:
       enabled: true
       relay:
