Grafana continer ignores custom.ini...

--- a/kubernetes/cluster/apps/monitoring/grafana/helm-release.yaml
+++ b/kubernetes/cluster/apps/monitoring/grafana/helm-release.yaml
@@ -56,8 +56,8 @@ spec:
         advancedMounts:
           app:
             app:
-              - path: /etc/grafana/custom.ini
-                subPath: custom.ini
+              - path: /etc/grafana/grafana.ini
+                subPath: grafana.ini
                 readOnly: true
       data:
         enabled: true
