Add vpn-egress to m3u editor

--- a/kubernetes/cluster/apps/media/m3u-editor/helm-release.yaml
+++ b/kubernetes/cluster/apps/media/m3u-editor/helm-release.yaml
@@ -17,6 +17,9 @@ spec:
         namespace: flux-system
       interval: 5m
   values:
+    defaultPodOptions:
+      labels:
+        egress-gw: vpn
     controllers:
       app:
         containers:
