--- a/kubernetes/cluster/apps/media/m3u-editor/helm-release.yaml
+++ b/kubernetes/cluster/apps/media/m3u-editor/helm-release.yaml
@@ -35,8 +35,7 @@ spec:
             image:
               repository: postgres
               tag: 16.9
-            envFrom:
-              - secret: *envFrom
+            envFrom: *envFrom
       redis:
         containers:
           redis:
