--- a/kubernetes/cluster/apps/media/kustomization.yaml
+++ b/kubernetes/cluster/apps/media/kustomization.yaml
@@ -3,14 +3,15 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - namespace.yaml
-  - egress-gateway
-  - prowlarr
-  - qbittorrent
-  - flaresolverr
-  - sonarr
-  - radarr
-  - plex
   - calibre-web-automated
   - calibre-web-automated-downloader
+  - dispacharr
+  - egress-gateway
+  - flaresolverr
   - jellyfin
   - m3u-editor
+  - plex
+  - prowlarr
+  - qbittorrent
+  - radarr
+  - sonarr
