--- a/kubernetes/cluster/apps/media/plex/helm-release.yaml
+++ b/kubernetes/cluster/apps/media/plex/helm-release.yaml
@@ -31,13 +31,9 @@ spec:
               PGID: 568
               TZ: America/Toronto
         pod:
-          affinity:
-            nodeAffinity:
-              requiredDuringSchedulingIgnoredDuringExecution:
-                nodeSelectorTerms:
-                  - matchExpressions:
-                    - key: extensions.talos.dev/nonfree-kmod-nvidia-lts
-                      operator: Exists
+          runtimeClassName: nvidia
+          nodeSelector:
+            "tam.land/gpu.present": "true"
     service:
       app:
         enabled: true
