--- a/kubernetes/cluster/infra/namespace.yaml
+++ b/kubernetes/cluster/infra/namespace.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: csi-proxmox
+  name: infra
   labels:
     pod-security.kubernetes.io/enforce: privileged
