--- a/kubernetes/cluster/flux-bootstrap/helm-repos/proxmox-csi-plugin.yaml
+++ b/kubernetes/cluster/flux-bootstrap/helm-repos/proxmox-csi-plugin.yaml
@@ -8,3 +8,8 @@ spec:
   interval: 15m
   url: oci://ghcr.io/sergelogvinov/charts/proxmox-csi-plugin
   timeout: 3m
+  ref:
+    tag: 0.5.3
+  layerSelector:
+    mediaType: "application/vnd.cncf.helm.chart.content.v1.tar+gzip"
+    operation: copy
