--- a/kubernetes/cluster/flux-bootstrap/sops-secrets/infra-secrets.sops.yaml
+++ b/kubernetes/cluster/flux-bootstrap/sops-secrets/infra-secrets.sops.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 stringData:
-    proxmox_tamland_url: ENC[AES256_GCM,data:N0pzj6K+0TbrDbUereZa5DwxvOBA,iv:Bv6FBxAp9KHZsfwWKaHvWn4GfYSOoGZusw8+VZvzFhI=,tag:UFA7YiQGJZ1y6t495+Z54A==,type:str]
+    proxmox_tamland_hostname: ENC[AES256_GCM,data:T/yBKLc8OuGmwkpGFMviiesJKU+D,iv:su653AojbyUAq/f2No7AB+kx7rqV7c3SVc6Kb6RwjIw=,tag:tJnDiBKXSsxmJx4X4c+LVA==,type:str]
     proxmox_tamland_token_id: ENC[AES256_GCM,data:2dj81sxo6nX/LN/AsrzV,iv:xv0Dln25SA+vIALIsWqTP4d762Jeecc2jBC1mJqUn4g=,tag:Wn+x7RxOglYNlGZYGNi3mg==,type:str]
     proxmox_tamland_token_secret: ENC[AES256_GCM,data:bYSaTSVfNWj+MT5JNUhkYBy4phh4M9vM+OkJiLf9OF3VXE3n,iv:bxeMJqesgyt5CPZHJW7zKCctbhomaiUH6UoQEdB5Lc0=,tag:MEXhm1/t5KPsEBHGd3ui0w==,type:str]
 kind: Secret
@@ -8,9 +8,11 @@ metadata:
     creationTimestamp: null
     name: infra-sops-secrets
     namespace: flux-system
+    labels:
+        reconcile.fluxcd.io/watch: Enabled
 sops:
-    lastmodified: "2025-12-19T04:57:53Z"
-    mac: ENC[AES256_GCM,data:bbB7Q56/TlbqSv4DwgsmMjv/GhPHLobBWrgp8DhH04bWdGBRPo6bmDTSoVy1LHUu1UJWG1S6shXVqA2KkB/iIbiQ9UjDywKXhgR7Y7Csk97hZYtQ/LggIZWNzTbSipV2/Zt9J23CB7l546tK1Y6f3GjypAjWgM1tXa5tupr69as=,iv:zW7NODXD5VhSG0xT4vuojGhhPk+/YFHYYoJZeCdek9o=,tag:+M39/81g4vXWvtT/1C4oKQ==,type:str]
+    lastmodified: "2025-12-20T04:57:16Z"
+    mac: ENC[AES256_GCM,data:z9vXHbIEWvTYepsQPRUzTxlidcL007U8zPw1yOoWkabQAJm4tv1bIiRUh9jg9cFtrhQ5eez3Xs2LXAOtousai01dOsK7lqQp84YJeJ8xbHbI0r4rVv/UcqFb5+wzsqfzkKfBX64ZqVP5yWVPCEYn8djjdyfW8jaBe8sztqTj3Ok=,iv:HNTgy3VyxTseAd7Qa9Jw5VtRZf/Gq5RVNctOUE5GvnM=,tag:wYVVybNDf5etRr6pZR4k0Q==,type:str]
     pgp:
         - created_at: "2025-12-19T04:32:28Z"
           enc: |-
