--- a/kubernetes/cluster/infra/csi-proxmox/proxmox-csi-plugin/helm-release.yaml
+++ b/kubernetes/cluster/infra/csi-proxmox/proxmox-csi-plugin/helm-release.yaml
@@ -33,8 +33,8 @@ spec:
       - key: node-role.kubernetes.io/control-plane
         effect: NoSchedule
     storageClass:
-      - name: proxmox-data-lvm-thin
-        storage: data
+      - name: proxmox-data-local-lvm
+        storage: local-lvm
         reclaimPolicy: Delete
         fstype: xfs
         ssd: true
