--- a/kubernetes/cluster/infra/csi-proxmox/proxmox-csi-plugin/helm-release.yaml
+++ b/kubernetes/cluster/infra/csi-proxmox/proxmox-csi-plugin/helm-release.yaml
@@ -33,8 +33,8 @@ spec:
       - key: node-role.kubernetes.io/control-plane
         effect: NoSchedule
     storageClass:
-      - name: proxmox-data-local-lvm
-        storage: local-lvm
+      - name: proxmox-data-ssd-array
+        storage: SSD-Array
         reclaimPolicy: Delete
-        fstype: xfs
+        fstype: zfs
         ssd: true
