--- a/kubernetes/cluster/apps/other-webapps/kustomization.yaml
+++ b/kubernetes/cluster/apps/other-webapps/kustomization.yaml
@@ -3,11 +3,12 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - namespace.yaml
-  - lubelog
-  - stirlingpdf
   - ghostfolio
   - immich
+  - lubelog
   - ollama
-  - wallos
-  - vaultwarden
   - paperless-ngx
+  - stirlingpdf
+  - vaultwarden
+  - wallos
+  - wedding
