--- a/kubernetes/cluster/flux-bootstrap/homerow-repo.yaml
+++ b/kubernetes/cluster/flux-bootstrap/homerow-repo.yaml
@@ -24,3 +24,7 @@ spec:
   sourceRef:
     kind: GitRepository
     name: homerow-infra-repo
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-gpg
