Update CSI filesystem

--- a/kubernetes/cluster/infra/csi-proxmox/proxmox-csi-plugin/helm-release.yaml
+++ b/kubernetes/cluster/infra/csi-proxmox/proxmox-csi-plugin/helm-release.yaml
@@ -36,5 +36,5 @@ spec:
       - name: proxmox-data-ssd-array
         storage: SSD-Array
         reclaimPolicy: Delete
-        fstype: zfs
+        fstype: ext4
         ssd: true
