--- a/kubernetes/cluster/infra/local-storage/kustomization.yaml
+++ b/kubernetes/cluster/infra/local-storage/kustomization.yaml
@@ -1,6 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - csi-proxmox
-  - local-storage
-  - nvidia
+  - storage-class.yaml
+  - worker06
