--- a/kubernetes/cluster/infra/local-storage/worker06/kustomization.yaml
+++ b/kubernetes/cluster/infra/local-storage/worker06/kustomization.yaml
@@ -1,6 +1,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - csi-proxmox
-  - local-storage
-  - nvidia
+  - local-storage.yaml
