--- a/kubernetes/cluster/apps/smart-home/frigate/helm-release.yaml
+++ b/kubernetes/cluster/apps/smart-home/frigate/helm-release.yaml
@@ -35,8 +35,9 @@ spec:
             args:
               - |
                 mergerfs \
+                  -f \
                   -o allow_other,use_ino,category.create=ff,moveonenospc=true,fsname=frigate-media \
-                  /mnt/ssd:/mnt/nfs \
+                  /ssd:/nfs \
                   /media
         pod:
           runtimeClassName: nvidia
@@ -51,6 +52,38 @@ spec:
               NVIDIA_VISIBLE_DEVICES: all
             securityContext:
               privileged: true
+      mover:
+        type: cronjob
+        cronjob:
+          schedule: "0 * * * *"
+          concurrencyPolicy: Forbid
+          successfulJobsHistory: 1
+          failedJobsHistory: 3
+          startingDeadlineSeconds: 300
+        pod:
+          nodeSelector:
+            "tam.land/tpu.present": "true"
+        containers:
+          mover:
+            image:
+              repository: alpine
+              tag: 3.23.2
+            command:
+              - /bin/sh
+              - -ec
+            # TODO: We can probably just make our own container for this instead of installing
+            # deps every time the job runs.
+            args:
+              - |
+                apk add --no-cache rsync findutils coreutils
+
+                cd /ssd
+                find frigate -type f -mmin +10 -print0 \
+                | rsync -av --no-owner --no-group \
+                    --remove-source-files --prune-empty-dirs --ignore-existing \
+                    --from0 --files-from=- \
+                    ./ /nfs/
+                find /ssd -type d -empty -delete || true
     ingress:
       app:
         enabled: true
@@ -94,7 +127,8 @@ spec:
           app:
             mergerfs:
               - path: /ssd
-            movejob:
+          mover:
+            mover:
               - path: /ssd
       nfs:
         type: nfs
@@ -104,7 +138,8 @@ spec:
           app:
             mergerfs:
               - path: /nfs
-            movejob:
+          mover:
+            mover:
               - path: /nfs
       merged:
         type: emptyDir
@@ -112,8 +147,10 @@ spec:
           app:
             app:
               - path: /media
+                mountPropagation: Bidirectional
             mergerfs:
               - path: /media
+                mountPropagation: Bidirectional
       tpu:
         type: hostPath
         hostPath: /dev/apex_0
