--- a/kubernetes/cluster/infra/cni-cilium/cilium/helm-release.yaml
+++ b/kubernetes/cluster/infra/cni-cilium/cilium/helm-release.yaml
@@ -1,10 +1,3 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: cilium
-  labels:
-    pod-security.kubernetes.io/enforce: privileged
----
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -34,7 +27,7 @@ spec:
     routingMode: "native"
     autoDirectNodeRoutes: true
     ipv4NativeRoutingCIDR: "10.201.0.0/16"
-    kubeProxyReplacement: false
+    kubeProxyReplacement: true
     ipam:
       mode: "kubernetes"
     cluster:
