--- a/kubernetes/cluster/infra/cni-cilium/kustomization.yaml
+++ b/kubernetes/cluster/infra/cni-cilium/kustomization.yaml
@@ -1,7 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - cni-cilium
-  - csi-proxmox
-  - local-storage
-  - nvidia
+  - namespace.yaml
+  - cilium
