--- a/kubernetes/cluster/flux-bootstrap/sources/oci-repos/kustomization.yaml
+++ b/kubernetes/cluster/flux-bootstrap/sources/oci-repos/kustomization.yaml
@@ -1,5 +1,4 @@
----
-apiVersion: kustomize.config.k8s.io/v1beta1
+apiVersion: kustomize.config.k8s.io/v1
 kind: Kustomization
 resources:
   - proxmox-csi-plugin.yaml
