--- a/kubernetes/cluster/infra/csi-local-storage/local-path-provisioner/kustomization.yaml
+++ b/kubernetes/cluster/infra/csi-local-storage/local-path-provisioner/kustomization.yaml
@@ -1,5 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - storage-class.yaml
-  - worker06
+  - namespace.yaml
+  - helm-release.yaml
