--- a/kubernetes/cluster/apps/other-webapps/ollama/helm-release.yaml
+++ b/kubernetes/cluster/apps/other-webapps/ollama/helm-release.yaml
@@ -85,9 +85,10 @@ spec:
     persistence:
       ollama:
         enabled: true
-        type: nfs
-        server: nfs.local.tam.land
-        path: /nfs-share/other-webapps/ollama/data
+        type: persistentVolumeClaim
+        accessMode: ReadWriteOnce
+        size: 50Gi
+        storageClass: local-fast-960-worker06
         advancedMounts:
           app:
             app:
