--- a/kubernetes/cluster/apps/other-webapps/vaultwarden/helm-release.yaml
+++ b/kubernetes/cluster/apps/other-webapps/vaultwarden/helm-release.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -11,7 +10,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 4.4.0
+      version: 4.5.0
       sourceRef:
         kind: HelmRepository
         name: bjw-s
@@ -25,10 +24,10 @@ spec:
           app:
             image:
               repository: vaultwarden/server
-              tag: 1.34.3
+              tag: 1.35.0
             env:
               TZ: America/Toronto
-              SIGNUPS_ALLOWED: true
+              SIGNUPS_ALLOWED: false
               DOMAIN: "https://bw.tam.land"
               ADMIN_TOKEN: ""
     service:
