--- a/kubernetes/cluster/apps/erpnext/helm-release.yaml
+++ b/kubernetes/cluster/apps/erpnext/helm-release.yaml
@@ -2,7 +2,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: erpnext
-  namespace: homerow
+  namespace: erpnext
 spec:
   interval: 5m
   upgrade:
@@ -10,7 +10,7 @@ spec:
   chart:
     spec:
       chart: erpnext
-      version: 7.0.258
+      version: 7.0.261
       sourceRef:
         kind: HelmRepository
         name: frappe
