--- a/kubernetes/cluster/apps/games/factorio/tree-fiddy/kustomization.yaml
+++ b/kubernetes/cluster/apps/games/factorio/tree-fiddy/kustomization.yaml
@@ -2,5 +2,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - factorio-secret.sops.yaml
-  - tree-fiddy
+  - helm-release.yaml
