--- a/kubernetes/cluster/apps/other-webapps/ollama/helm-release.yaml
+++ b/kubernetes/cluster/apps/other-webapps/ollama/helm-release.yaml
@@ -91,9 +91,7 @@ spec:
       ollama:
         enabled: true
         type: persistentVolumeClaim
-        accessMode: ReadWriteOnce
-        size: 50Gi
-        storageClass: local-fast-960-worker06
+        existingClaim: ollama
         advancedMounts:
           app:
             app:
