--- a/kubernetes/cluster/apps/other-webapps/ollama/persistence.yaml
+++ b/kubernetes/cluster/apps/other-webapps/ollama/persistence.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: ollama
-  namepsace: other-webapps
+  namespace: other-webapps
 spec:
   accessModes:
     - ReadWriteOnce
